# AMV-Tools

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  amv-tools.bat  amv-tools.sh  install.bat  install.sh  pyproject.toml
.github/workflows/: build.yml
app/: index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
app/electron/: main.ts  preload.ts
app/scripts/: dev-electron.cjs  write-electron-package.cjs
app/src/: App.tsx  derushKeys.ts  main.tsx
app/src/api/: client.ts  types.ts
app/src/components/: BootstrapScreen.tsx  DerushTab.tsx  LibraryTab.tsx  MaskMode.tsx  MiniEditor.tsx  OnboardingScreen.tsx  SearchTab.tsx  SettingsTab.tsx  TagsTab.tsx  TutorialOverlay.tsx
app/src/i18n/: index.tsx  strings.app.ts  strings.common.ts  strings.derush.ts  strings.editor.ts  strings.library.ts  strings.mask.ts  strings.onboarding.ts  strings.search.ts  strings.settings.ts  strings.tags.ts
app/src/styles/: fonts.css  index.css  theme.css
assets/logo/: amv-tools-logo.icns
backend/: __init__.py  config.py  paths.py  server.py  state.py
backend/api/: __init__.py  databases.py  derush.py  export.py  index.py  scene.py  search.py  segment.py  settings.py  setup.py  status.py  tags.py  videos.py
backend/db/: __init__.py  merge.py  queries.py  schema.py
backend/export/: __init__.py  ffmpeg.py
backend/indexing/: __init__.py  cuts.py  frames.py  pipeline.py  sub_segment.py
backend/models/: __init__.py  birefnet.py  device.py  mask_postprocess.py  matanyone.py  sam2.py  siglip2.py  wd_tagger.py
