[project]
name = "amv-tools"
version = "0.2.0a0"
description = "AMV Tools — semantic scene browser for anime music video creators."
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "av>=17.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "imageio-ffmpeg>=0.5.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "requests>=2.28.0",
    "huggingface_hub>=0.24.0",
    "toml>=0.10.2",
    "tqdm>=4.65.0",
    "transformers>=4.45.0",
    "websockets>=12.0",
    "hf-transfer",
    # Transitive deps required by BiRefNet's remote modeling code (loaded via
    # trust_remote_code=True). Transformers >= 5.x raises ImportError if any
    # of these is missing, so they have to live in the base env regardless of
    # GPU backend.
    "timm>=1.0.0",
    "einops>=0.7.0",
    "kornia>=0.7.0",
    # Mask post-processing (erosion, BG suppression, decontaminate) and the
    # guided-filter alpha upsampling at export all use cv2. Headless build:
    # no Qt payload, works in the sidecar.
    "opencv-python-headless>=4.9.0",
]
# Note on MatAnyone: the upstream package is git-only (github.com/pq-yang/MatAnyone)
# and not published on PyPI. We deliberately do NOT pull it in here to keep the
# installer git-free. backend/api/segment.py:112 falls back gracefully when the
# `matanyone` module is missing and silently routes Auto to BiRefNet alone.
# Users who want the temporal propagation step can install it manually:
#   uv pip install "matanyone @ git+https://github.com/pq-yang/MatAnyone"

[project.optional-dependencies]
cpu = [
    "torch==2.11.0",
    "torchvision==0.26.0",
    "onnxruntime>=1.18.0",
    "sam2==1.1.0 ; sys_platform != 'darwin'",
]
cu126 = [
    "torch==2.11.0 ; sys_platform != 'darwin'",
    "torchvision==0.26.0 ; sys_platform != 'darwin'",
    "onnxruntime-gpu>=1.18.0 ; sys_platform != 'darwin'",
    "sam2==1.1.0 ; sys_platform != 'darwin'",
]
cu130     = [
    "torch==2.11.0 ; sys_platform != 'darwin'",
    "torchvision==0.26.0 ; sys_platform != 'darwin'",
    "onnxruntime-gpu>=1.18.0 ; sys_platform != 'darwin'",
    # Same rationale as cu130-trt: onnxruntime-gpu needs CUDA-12 runtime DLLs
    # to put the wd-tagger on the GPU. Without these, the tagger silently falls
    # back to CPU and indexing slows down by ~20×.
    "nvidia-cublas-cu12 ; sys_platform != 'darwin'",
    "nvidia-cudnn-cu12 ; sys_platform != 'darwin'",
    "nvidia-cuda-runtime-cu12 ; sys_platform != 'darwin'",
    "nvidia-cuda-nvrtc-cu12 ; sys_platform != 'darwin'",
    "nvidia-cufft-cu12 ; sys_platform != 'darwin'",
    "nvidia-curand-cu12 ; sys_platform != 'darwin'",
    "nvidia-cusolver-cu12 ; sys_platform != 'darwin'",
    "nvidia-cusparse-cu12 ; sys_platform != 'darwin'",
    "nvidia-nvjitlink-cu12 ; sys_platform != 'darwin'",
    # SAM 2 (click -> mask + temporal propagation) for the roto/alpha feature.
    # Use the PyPI package so end users do not need Git installed.
    "sam2==1.1.0 ; sys_platform != 'darwin'",
]
cu130-trt = [
    "torch==2.11.0 ; sys_platform != 'darwin'",
    "torchvision==0.26.0 ; sys_platform != 'darwin'",
    "torch-tensorrt ; sys_platform != 'darwin'",
    "onnxruntime-gpu>=1.18.0 ; sys_platform != 'darwin'",
    # onnxruntime-gpu 1.26 is built against CUDA 12 + cuDNN 9. PyTorch cu130 ships
    # cu13 runtimes only, so we add the cu12 runtime wheels side-by-side. DLLs are
    # named cublasLt64_12 vs cublasLt64_13 so they coexist without conflict.
    "nvidia-cublas-cu12 ; sys_platform != 'darwin'",
    "nvidia-cudnn-cu12 ; sys_platform != 'darwin'",
    "nvidia-cuda-runtime-cu12 ; sys_platform != 'darwin'",
    "nvidia-cuda-nvrtc-cu12 ; sys_platform != 'darwin'",
    "nvidia-cufft-cu12 ; sys_platform != 'darwin'",
    "nvidia-curand-cu12 ; sys_platform != 'darwin'",
    "nvidia-cusolver-cu12 ; sys_platform != 'darwin'",
    "nvidia-cusparse-cu12 ; sys_platform != 'darwin'",
    "nvidia-nvjitlink-cu12 ; sys_platform != 'darwin'",
    "sam2==1.1.0 ; sys_platform != 'darwin'",
]
rocm = [
    "torch==2.11.0 ; sys_platform != 'darwin'",
    "torchvision==0.26.0 ; sys_platform != 'darwin'",
    "triton-rocm==3.6.0 ; sys_platform == 'linux'",
    "onnxruntime>=1.18.0",
    "sam2==1.1.0 ; sys_platform != 'darwin'",
]
xpu = [
    "torch==2.11.0 ; sys_platform != 'darwin'",
    "torchvision==0.26.0 ; sys_platform != 'darwin'",
    "triton-xpu==3.7.0 ; sys_platform != 'darwin'",
    "onnxruntime>=1.18.0",
    "sam2==1.1.0 ; sys_platform != 'darwin'",
]
dml       = ["torch==2.4.1", "torch-directml ; sys_platform == 'win32'", "onnxruntime-directml>=1.18.0 ; sys_platform == 'win32'"]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'",
    "sys_platform == 'linux'"
]
package = false
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
    { extra = "cu130" },
    { extra = "cu130-trt" },
    { extra = "dml" },
    { extra = "rocm" },
    { extra = "xpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu130", extra = "cu130-trt", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-rocm",  extra = "rocm", marker = "sys_platform == 'linux'" },
  { index = "pytorch-xpu",   extra = "xpu", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cpu",   extra = "cpu" },
  { index = "pytorch-cpu",   extra = "dml" },
]

torchvision = [
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu130", extra = "cu130-trt", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-rocm",  extra = "rocm", marker = "sys_platform == 'linux'" },
  { index = "pytorch-xpu",   extra = "xpu", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cpu",   extra = "cpu" },
]

triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
triton-xpu = [
  { index = "pytorch-xpu", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
